--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
 
             <div id="slider">
                 <ul>
-                    <li><a href="http://templatica.com/preview/30"><img src="images/01.jpg" alt="Css Template Preview" /></a></li>
-                    <li><a href="http://templatica.com/preview/7"><img src="images/02.jpg" alt="Css Template Preview" /></a></li>
-                    <li><a href="http://templatica.com/preview/25"><img src="images/03.jpg" alt="Css Template Preview" /></a></li>
-                    <li><a href="http://templatica.com/preview/26"><img src="images/04.jpg" alt="Css Template Preview" /></a></li>
-                    <li><a href="http://templatica.com/preview/27"><img src="images/05.jpg" alt="Css Template Preview" /></a></li>
+                    <li>
+                        <img src="images/slide1.jpg" alt="">
+                    </li>
                 </ul>
             </div>
 
