--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
             <div id="slider">
                 <ul>
                     <li>
-                        <img src="images/slide1.jpg" alt="">
+                        <h2>از خدمات طراحی همیار وردپرس چه میدانید؟</h2>
+                        <h3>تجربه یک طراحی استاندارد</h3>
+                        <img  src="images/slide1.jpg" alt="">
                     </li>
                 </ul>
             </div>
