--- a/slideShow.html
+++ b/slideShow.html
@@ -63,10 +63,13 @@
             position: absolute;
             width: 100%;
             float: right;
+            z-index: 1;
+            top: 50%;
+            transform: translateY(50%);
         }
 
         .right {
-            right: 0;
+            float: right;
         }
 
         .right:hover {
@@ -74,7 +77,7 @@
         }
 
         .left {
-            left: 0;
+            float: left;
         }
 
         .left:hover {
@@ -85,9 +88,7 @@
 
 </head>
 <body>
-<!--<div class="container">-->
-<!--    sdfd-->
-<!--</div>-->
+
 <div class="container">
 
     <div class="pointer">
