--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
             <div id="slider">
                 <ul>
                     <li>
-                        <h2>از خدمات طراحی همیار وردپرس چه میدانید؟</h2>
-                        <h3>تجربه یک طراحی استاندارد</h3>
-                        <img  src="images/slide1.jpg" alt="">
+                        <div class="slide-box">
+                            <h2>از خدمات طراحی همیار وردپرس چه میدانید؟</h2>
+                            <h3>تجربه یک طراحی استاندارد</h3>
+                            <a href="#">مشاهده خدمات طراحی</a>
+                            <img src="images/slide1.jpg" alt="">
+                        </div>
                     </li>
                 </ul>
             </div>
