--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>طراحی سایت</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="fonts/font%20awsome/css/font-awesome.min.css">
     <script type="text/javascript" src="jquery-1.8.1.min.js"></script>
@@ -15,8 +15,10 @@
             });
         });
     </script>
-
     <link href="css/screen.css" rel="stylesheet" type="text/css" media="screen"/>
+    <link href="css/default.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="js/filters.js"></script>
+    <script type="text/javascript" src="js/init.js"></script>
 </head>
 <body>
 <div class="container">
@@ -67,7 +69,7 @@
     <div class="clear"></div>
 
     <div id="container">
-        <div id="content">
+        <div id="slider-content">
             <div id="slider">
                 <ul>
                     <li>
@@ -140,24 +142,80 @@
             دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</p>
     </div>
     <div class="clear"></div>
-    
-    <div class="portfolio">
+
+    <div class="text-section">
         <h3>آخرین نمونه کارها</h3>
-        <ul>
-            <li>
-                <a href="#">همه</a>
-            </li>
-            <li>
-                <a href="#">لوگو</a>
-            </li>
-            <li>
-                <a href="#">طراحی وب</a>
-            </li>
-            <li>
-                <a href="#">سئو</a>
-            </li>
-        </ul>
-        
+    </div>
+    <div id="content">
+        <div class="filters demo1">
+            <div class="filter">
+                <a href="#" rel="all">همه</a>
+                <a href="#" rel="logo2">لوگو</a>
+                <a href="#" rel="web">طراحی وب</a>
+                <a href="#" rel="seo">سئو</a>
+            </div>
+            <div class="containers">
+                <ul>
+                    <li class="logo2">
+                        <a href="#"><img src="images/port1.jpg" alt=""/></a>
+                    </li>
+                    <li class="web">
+                        <a href="#"><img src="images/port2.jpg" alt=""/></a>
+                    </li>
+                    <li class="seo">
+                        <a href="#"><img src="images/port3.jpg" alt=""/></a>
+                    </li>
+                    <li class="seo">
+                        <a href="#"><img src="images/port3.jpg" alt=""/></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="clear"></div>
+
+    <div class="text-section">
+        <h3>وبلاگ همیار وردپرس</h3>
+    </div>
+    <div class="blog">
+        <img src="images/blog.jpg" alt="">
+        <h4>حضور در الکامپ 2014</h4>
+        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون
+            بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع
+            و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل
+            دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</p>
+    </div>
+    <div class="blog">
+        <img src="images/blog.jpg" alt="">
+        <h4>حضور در الکامپ 2014</h4>
+        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون
+            بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع
+            و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل
+            دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</p>
+    </div>
+    <div class="blog">
+        <img src="images/blog.jpg" alt="">
+        <h4>حضور در الکامپ 2014</h4>
+        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون
+            بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع
+            و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل
+            دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</p>
+    </div>
+    <div class="clear"></div>
+
+    <div class="text-section"><h3>ارتباط با ما</h3></div>
+    <div class="contact-us">
+        <img src="images/googlemap.jpg" alt="">
+
+        آدرس: <br>
+
+            تهران خ ولیعصر میدان توانیر ک برادران پ1 واحد 704 <br>
+            <br>
+
+
+            تلفن: <br>
+            02188198592 - 02188198591
+
     </div>
     <div class="clear"></div>
 </div>
