--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
     <link href="css/default.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/init.js"></script>
+    <script src="js/jquery.simple_slider.js" type="text/javascript"></script>
+    <script>
+        jQuery(document).ready(function () {
+            jQuery('#holder').show();
+            jQuery('#test').simple_slider({
+                'leftID': 'leftNav',
+                'rightID': 'rightNav',
+                'display': 3
+            })
+        });
+    </script>
 </head>
 <body>
 <div class="container">
@@ -209,13 +220,29 @@
 
         آدرس: <br>
 
-            تهران خ ولیعصر میدان توانیر ک برادران پ1 واحد 704 <br>
-            <br>
+        تهران خ ولیعصر میدان توانیر ک برادران پ1 واحد 704 <br>
+        <br>
 
+        تلفن: <br>
+        02188198592 - 02188198591
 
-            تلفن: <br>
-            02188198592 - 02188198591
+    </div>
+    <div class="clear"></div>
 
+    <div class="text-section"><h3>برخی همکاران</h3></div>
+    <div id='holder' class="cohort">
+        <i class="fa fa-arrow-right" id='leftNav'></i>
+        <ul id='test'>
+            <li> <img src='images/wordpresslogo.jpg' alt=""/> </li>
+            <li> <img src='images/woocommercelogo.jpg' alt=""/> </li>
+            <li> <img src='images/wordpresslogo.jpg' alt=""/> </li>
+            <li> <img src='images/woocommercelogo.jpg' alt=""/> </li>
+            <li> <img src='images/woocommercelogo.jpg' alt=""/> </li>
+            <li> <img src='images/wordpresslogo.jpg' alt=""/> </li>
+            <li> <img src='images/wordpresslogo.jpg' alt=""/> </li>
+            <li> <img src='images/wordpresslogo.jpg' alt=""/> </li>
+        </ul>
+        <i class="fa fa-arrow-left" id='rightNav'></i>
     </div>
     <div class="clear"></div>
 </div>
