--- a/index.html
+++ b/index.html
@@ -233,16 +233,29 @@
     <div id='holder' class="cohort">
         <i class="fa fa-arrow-right" id='leftNav'></i>
         <ul id='test'>
-            <li> <img src='images/wordpresslogo.jpg' alt=""/> </li>
-            <li> <img src='images/woocommercelogo.jpg' alt=""/> </li>
-            <li> <img src='images/wordpresslogo.jpg' alt=""/> </li>
-            <li> <img src='images/woocommercelogo.jpg' alt=""/> </li>
-            <li> <img src='images/woocommercelogo.jpg' alt=""/> </li>
-            <li> <img src='images/wordpresslogo.jpg' alt=""/> </li>
-            <li> <img src='images/wordpresslogo.jpg' alt=""/> </li>
-            <li> <img src='images/wordpresslogo.jpg' alt=""/> </li>
+            <li><img src='images/wordpresslogo.jpg' alt=""/></li>
+            <li><img src='images/woocommercelogo.jpg' alt=""/></li>
+            <li><img src='images/wordpresslogo.jpg' alt=""/></li>
+            <li><img src='images/woocommercelogo.jpg' alt=""/></li>
+            <li><img src='images/woocommercelogo.jpg' alt=""/></li>
+            <li><img src='images/wordpresslogo.jpg' alt=""/></li>
+            <li><img src='images/wordpresslogo.jpg' alt=""/></li>
+            <li><img src='images/wordpresslogo.jpg' alt=""/></li>
         </ul>
         <i class="fa fa-arrow-left" id='rightNav'></i>
+    </div>
+    <div class="clear"></div>
+
+    <div class="footer">
+        کلیه حقوق طراحی این سایت در اختیار گروه همیار وردپرس است
+        <br>
+        اجرا توسط فاطمه بهمرام
+        <ul>
+            <li>صفحه اصلی</li>
+            <li>تبلیغات</li>
+            <li>درباره ما</li>
+            <li>ارتباط با ما</li>
+        </ul>
     </div>
     <div class="clear"></div>
 </div>
